2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Kill warnings about signed vs unsigned values.

	* mln/topo/is_not_1d_isthmus.hh
	(mln::topo::is_not_1d_isthmus<I, N>::operator()): Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Catch up with the current interface of breadth_first_thinning.

	* apps/morphers/recorder-bft.cc: Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Catch up with the current interface of mln::image3d.

	* apps/generic-skel/image3d-skel-unconstrained.cc,
	* apps/generic-skel/image3d-skel.hh:
	Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Replace meyer_wst with watershed::flooding.

	* apps/mesh-segm-skel/mesh-complex-pinv-curv-segm.cc: Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Convert remaining Milena code to mln_trace.

	* doc/examples/devel/facade.cc.raw,
	* doc/examples/devel/impl.cc.raw,
	* mln/io/vtk/save.hh,
	* mln/topo/skeleton/breadth_first_thinning.hh,
	* mln/topo/skeleton/priority_driven_thinning.hh,
	* new-header:
	Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Fix the use of Pi in Milena's apps/mesh-segm-skel.

	* apps/mesh-segm-skel/mesh-complex-max-curv-extrema.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Fix header inclusions in Milena's apps/mesh-segm-skel.

	* apps/mesh-segm-skel/mesh-complex-max-curv-1-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-2-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-extrema.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	Here.

2012-02-17  Roland Levillain  <roland@lrde.epita.fr>

	Add tests to generate figures for the WADGMM 2010/LNCS submission.
