@@ -1,5 +1,14 @@
 2013-08-29  Roland Levillain  <roland@lrde.epita.fr>
 
+	Kill warnings about unused variables.
+
+	* mln/io/vtk/save.hh,
+	* tools/connectivity_numbers_3d_tbb.hh,
+	* tools/simple_point3d_lut_tbb.hh:
+	Here.
+
+2013-08-29  Roland Levillain  <roland@lrde.epita.fr>
+
 	Kill warnings about signed vs unsigned values.
 
 	* mln/topo/is_not_1d_isthmus.hh
